--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':json-simple-1.1.1')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 }
