--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,13 @@
 buildscript {
     
     repositories {
+        maven {url "https://jitpack.io"}
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath 'com.google.gms:google-services:3.2.0'
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io'}
         google()
         jcenter()
         
