--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,27 +16,39 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Loading"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-        </activity>
-
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+        />
         <service
             android:name=".event_alarm"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".service_lb" />
-        <activity android:name=".service_db" />
-        <activity android:name=".service_nas" />
-        <activity android:name=".service_autoscaling" />
-        <activity android:name=".Payment" />
-        <activity android:name=".Monitoring" />
-        <activity android:name=".Monitoring_alarm"/>
-        <activity android:name=".Monitoring_Messaging"/>
-        <activity android:name=".Monitoring_Metric"/>
-        <activity android:name=".service_disk" />
-        <activity android:name=".service_server" />
-        <activity android:name=".Dashboard" />
-        <activity android:name=".service_main"/>
+        <activity android:name=".service_lb"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_db"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_nas"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_autoscaling"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Payment"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Monitoring"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Monitoring_alarm"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Monitoring_Messaging"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Monitoring_Metric"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_disk"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_server"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".Dashboard"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".service_main"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
